--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -42,9 +42,17 @@
 	  	<ol>
 			<li>Spezialthemen
 				<ol>
+					<li>Die JSF-Konfuguration
+					</li>
 					<li>Web-Sockets
 						<ol>
-							<li><a href="#{externalContext.applicationContextPath}/websocket/websocket.xhtml">Web-Socket</a></li>
+							<li><a href="#{externalContext.applicationContextPath}/websocket/simple-timer.xhtml">Einfacher Timert</a></li>
+						</ol>
+					</li>
+					<li>Native Komponenten
+						<ol>
+							<li><a href="#{externalContext.applicationContextPath}/components/hello-world.xhtml">Hello World</a></li>
+							<li><a href="#{externalContext.applicationContextPath}/components/greeting.xhtml">Greeting</a></li>
 						</ol>
 					</li>
 				</ol>
