Konfiguration für Exception-Handler-Fabrik

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -42,11 +42,16 @@
 	  	<ol>
 			<li>Spezialthemen
 				<ol>
-					<li>Die JSF-Konfuguration
+					<li>Die JSF-Konfiguration
+						<ol>
+							<li><a href="#{externalContext.applicationContextPath}/jsfconfig/throw-arithmetic-exception.xhtml">Exception-Handler für Arithmetic-Exception</a></li>
+							<li><a href="#{externalContext.applicationContextPath}/jsfconfig/throw-array-index-out-of-bound-exception.xhtml">Exception-Handler für AIOOB-Exception</a></li>
+						</ol>
+					
 					</li>
 					<li>Web-Sockets
 						<ol>
-							<li><a href="#{externalContext.applicationContextPath}/websocket/simple-timer.xhtml">Einfacher Timert</a></li>
+							<li><a href="#{externalContext.applicationContextPath}/websocket/simple-timer.xhtml">Einfacher Timer</a></li>
 						</ol>
 					</li>
 					<li>Native Komponenten
