--- a/src/main/webapp/websockets/long-running.xhtml
+++ b/src/main/webapp/websockets/long-running.xhtml
@@ -44,6 +44,7 @@
 			}
 			function start() {
 				document.getElementById("loading").style.display = "inline-block";
+				document.getElementById("result").innerHTML = "";
 				jsf.push.open("form:running");
 			}
 		</script>
