stateless views added

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -54,12 +54,18 @@
 							<li><a href="#{externalContext.applicationContextPath}/websocket/simple-timer.xhtml">Einfacher Timer</a></li>
 						</ol>
 					</li>
+					<li>Resource-Library-Contracts
+						<ol>
+							<li><a href="#{externalContext.applicationContextPath}/resource-library-contracts/usage.xhtml">xyz</a></li>
+						</ol>
+					</li>
 					<li>Native Komponenten
 						<ol>
 							<li><a href="#{externalContext.applicationContextPath}/components/hello-world.xhtml">Hello World</a></li>
 							<li><a href="#{externalContext.applicationContextPath}/components/greeting.xhtml">Greeting</a></li>
 						</ol>
 					</li>
+					<li><a href="#{externalContext.applicationContextPath}/stateless/stateless.xhtml">Stateless</a></li>
 				</ol>
 			</li>
 		</ol>
