--- a/src/main/webapp/flows/wizard.xhtml
+++ b/src/main/webapp/flows/wizard.xhtml
@@ -11,8 +11,8 @@
 
 		<h:panelGrid>
 			<f:facet name="header">Wizard (Flow-Scope)</f:facet>
-			<h:commandButton action="wizard" value="Geschäftsprozess XYZ starten" />
-			<!-- mit h:button -->
+			<h:commandButton action="wizard" value="Geschäftsprozess XYZ starten (POST)" />
+			<h:button outcome="wizard" value="Geschäftsprozess XYZ starten (GET)" />
 		</h:panelGrid>
 
 <!-- flowScope: #{flowScope} -->
