Confused Abbruch/Ende in Flow revised

--- a/src/main/webapp/flows/aborted.xhtml
+++ b/src/main/webapp/flows/aborted.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="main">
 
 		<h:panelGrid>
-			<f:facet name="header">Ende</f:facet>
+			<f:facet name="header">Abbruch</f:facet>
 			Der Geschäftsprozess XYZ wurde abgebrochen.
 		</h:panelGrid>
 		<ui:include src="flow-info.xhtml" />
